# manifoldsDiffusion

./: .gitignore  README.md  animation.py  assembled.py  check.py  checkpoint.pth  denoise.py  environment.yml  fedora.def  log  main.py  model_1.pth  model_norm.pth  modeltraining.py  pyproject.toml  tensor.py  test.py  trial.py  trymatrix.py
diffusion_models/: __init__.py
diffusion_models/differential_equations/: __init__.py  base_class.py  reversed_class.py  simple_class.py
diffusion_models/score_functions/: __init__.py  base_class.py  simple_class.py
diffusion_models/score_networks/: __init__.py  loss_functions.py
diffusion_models/time_integrators/: __init__.py  base_class.py  simple_class.py
diffusion_models/utilities/: __init__.py  warning_suppressors.py
diffusionmodels/: __init__.py
diffusionmodels/dataprocessing/: __init__.py  baseclass.py  interfaces.py  sequential.py  simpleclass.py
diffusionmodels/differentialequations/: __init__.py  baseclass.py  reversedclass.py  simpleclass.py
diffusionmodels/distributions/: __init__.py  baseclass.py  interfaces.py  simpleclass.py
diffusionmodels/eulerian/: __init__.py
diffusionmodels/initialvalueproblems/: __init__.py
diffusionmodels/lagrangian/: __init__.py
diffusionmodels/manifolds/: __init__.py  baseclass.py  interfaces.py  matrixclass.py  rotationalgroups.py  simpleclass.py
diffusionmodels/pipeline/: __init__.py  baseclass.py  simpleclass.py
diffusionmodels/processes/: __init__.py
notebooks/: animation.py  assembled.py  model.pth  tensor.py  visualization.py
projects/: __init__.py
(+224 files in other folders)
