[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]

name = "manifold_diffusion"
version = "0.1.0"

description = ""

readme = "README.md"

authors = [
  { name = "Rezha Adrian Tanuharja" }
]

dependencies = [

]

requires-python = ">=3.11"


[project.optional-dependencies]

test = [
  "pytest"
]

development = [
  "ruff",
  "debugpy",
  "pyright"
]


[tool.setuptools.packages.find]

where = ["."]


[tool.pytest.ini_options]

markers = [
  "cpu: marks tests that check functionalities on CPU",
  "gpu: marks tests that check functionalities on GPU",
]
