[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]

name = "manifold_diffusion"
version = "0.1.0"

description = ""

readme = "README.md"

authors = [
  { name = "Rezha Adrian Tanuharja" }
]

 dependencies = [
  "torch>=2.0.1",
  "numpy>=1.24.3",
]

requires-python = ">=3.8.5"


[project.optional-dependencies]

test = [
  "pytest>=8.3.4"
]

development = [
  "ruff>=0.8.2",
  "debugpy>=1.8.10",
  "pyright>=1.1.390"
]


[tool.setuptools.packages.find]

where = ["."]


[tool.pytest.ini_options]

testpaths = ["tests"]

markers = [
  "cpu: marks tests that check functionalities on CPU",
  "gpu: marks tests that check functionalities on GPU",
]
